# hitr

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Dioxus.toml  LICENSE  README.md
.github/workflows/: pr.yaml  release.yaml
assets/: styles.css
src/: api.rs  app.rs  main.rs  types.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: curl.rs  history.rs  http.rs  lib.rs  loader.rs  main.rs  model.rs  openapi.rs  vault.rs
