[package]
name = "hitr-ui"
version = "0.1.3"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dioxus = { version = "0.7", features = ["web"] }
dioxus-logger = "0.7"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "Node", "NodeList", "HtmlElement", "HtmlDivElement", "HtmlTextAreaElement", "MutationObserver", "MutationObserverInit", "MutationRecord", "KeyboardEvent", "EventTarget", "Event", "Clipboard", "Navigator"] }
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
console_error_panic_hook = "0.1"

[workspace]
members = ["src-tauri"]
